fixed tooltip data contents not formatting appropriately in browsers with scrollbars

--- a/src/vizwhiz.d3.css
+++ b/src/vizwhiz.d3.css
@@ -211,6 +211,7 @@ div.vizwhiz_tooltip_data_name {
 
 div.vizwhiz_tooltip_data_value {
   display: inline-block;
+  float: right;
   text-align: right;
 }
 
